[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "questionpy-server"
description = "QuestionPy application server"
authors = ["Technische Universität Berlin, innoCampus <info@isis.tu-berlin.de>"]
license = "MIT"
homepage = "https://questionpy.org"
version = "0.2.4"
packages = [
    { include = "questionpy_common" },
    { include = "questionpy_server" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.3"
pydantic = "^2.6.4"
polyfactory = "^2.15.0"
pydantic-settings = "^2.2.1"
watchdog = "^4.0.0"
semver = "^3.0.2"
psutil = "^5.9.8"
jinja2 = "^3.1.3"

[tool.poetry.group.dev.dependencies]
types-psutil = "^5.9.5.20240316"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-aiohttp = "^1.0.5"
pytest-md = "^0.2.0"
coverage = { extras = ["toml"], version = "^7.4.4" }

[tool.poetry.group.linter]
dependencies = { ruff = "^0.3.5" }
optional = true

[tool.poetry.group.type-checker]
dependencies = { mypy = "^1.9.0" }
optional = true

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.pytest.ini_options]
# https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = "auto"

# This section is read automatically by Coverage.py when its working directory is .
# https://coverage.readthedocs.io/en/6.5.0/config.html#configuration-reference
[tool.coverage.run]
branch = true
source = ["questionpy_common", "questionpy_server"]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
