[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "questionpy-server"
description = "QuestionPy application server"
authors = ["Technische Universität Berlin, innoCampus <info@isis.tu-berlin.de>"]
license = "MIT"
homepage = "https://questionpy.org"
version = "0.3.0"
packages = [
    { include = "questionpy_common" },
    { include = "questionpy_server" }
]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.10"
pydantic = "^2.9.2"
polyfactory = "^2.17.0"
pydantic-settings = "^2.6.0"
watchdog = "^4.0.2"
semver = "^3.0.2"
psutil = "^6.1.0"
jinja2 = "^3.1.4"

[tool.poetry.group.dev.dependencies]
types-psutil = "^6.1.0.20241022"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
pytest-aiohttp = "^1.0.5"
pytest-md = "^0.2.0"
coverage = { extras = ["toml"], version = "^7.6.4" }

[tool.poetry.group.linter]
dependencies = { ruff = "^0.6.3" }
optional = true

[tool.poetry.group.type-checker]
dependencies = { mypy = "^1.13.0" }
optional = true

[tool.ruff]
extend = "ruff_defaults.toml"

[tool.ruff.lint.extend-per-file-ignores]
# unused-async (aiohttp handlers must be async even if they don't use it)
"**/questionpy_server/web/**/*" = ["RUF029"]

[tool.pytest.ini_options]
# https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope="function"

# This section is read automatically by Coverage.py when its working directory is .
# https://coverage.readthedocs.io/en/6.5.0/config.html#configuration-reference
[tool.coverage.run]
branch = true
source = ["questionpy_common", "questionpy_server"]

[tool.mypy]
plugins = "pydantic.mypy"
disallow_untyped_defs = true
strict_optional = true
show_error_codes = true
